fix jump page scroll bar, add getServerSideProps instead useEffect

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,9 +4,8 @@
 html,
 body {
     padding: 0;
-    margin: 0;
-
     background-color: #f3efe4;
+    margin: 0 calc(-1 * (100vw - 100%)) 0 0;
 }
 
 * {
